# app_review

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml
app_review/: dag.py  pipe.py
app_review/etl/: consts.py  extract.py  load.py  transform.py  utils.py
app_review/etl/app_store_scraper/: app_store.py  base.py
app_review/webapp/: app.py
configs/: config.yaml  hadoop.env
docker-entrypoint-initdb.d/: initdb.sql
